--- a/web1/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web1/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -103,7 +103,7 @@
                           </td>
                           <td class="text-left">{{dataList.length - i}}</td>
                           <td class="text-left">{{data.Name}}</td>
-                          <td class="text-left">{{data.MobileNo1 }}</td>
+                          <td class="text-left">{{(data.MobileNo1 !== 'null')? data.MobileNo1:'' }}</td>
                           <td class="text-left">{{(data.MobileNo2 !== 'null')? data.MobileNo2: ''}}</td>
                           <td class="text-left">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
                           <td class="text-left">{{(data.Email !== 'null')? data.Email: ''}}</td>
