--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -130,7 +130,7 @@
                                                         'null')? data.PhoneNo:''}}</td>
                                                     <td [ngClass]="{'bcolor': data.Status == 0 }">{{(data.Email !==
                                                         'null')? data.Email: ''}} </td>
-                                                    <td [ngClass]="{'bcolor': data.Status == 0 }">{{(data.Website !==
+                                                    <td [ngClass]="{'bcolor': data.Status == 0 }">{{(data.Website !=
                                                         'null')? data.Website:''}}</td>
                                                     <td [ngClass]="{'bcolor': data.Status == 0 }">{{(data.GSTNo !==
                                                         'null')? data.GSTNo: ''}}</td>
