--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -128,7 +128,8 @@
                         </div>
                     </th>
                     <th  style="width: 200px;">
-                        <div
+                        <% if (data.MRPHide === true){%>
+                        <div 
                             style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
                             <% if (data.CompanyID !== 2){%>
                                        MRP  <%=i.RetailPrice%>    
@@ -137,6 +138,7 @@
                                        OMR  <%=i.RetailPrice%>    
                               <%}%>            
                         </div>
+                        <%}%> 
                         <div
                             style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
                             (Inc. of all Taxes) 
