--- a/web1/src/app/report/eyetest-report/eyetest-report.component.html
+++ b/web1/src/app/report/eyetest-report/eyetest-report.component.html
@@ -8,12 +8,13 @@
                             <div class="row">
                                 <div class="col-md-1 col-8 p-0 ms-3">
                                     <h2>Eye Testing </h2>
+
                                 </div>
                             </div>
                         </div>
                         <div class="body">
                             <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="searchData()">
-                                <div class="row" >
+                                <div class="row">
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>Filter Types</mat-label>
@@ -88,15 +89,20 @@
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                        <button [disabled]="!f1.valid" class="me-2" type="submit" mat-raised-button color="primary">
+                                        <button [disabled]="!f1.valid" class="me-2" type="submit" mat-raised-button
+                                            color="primary">
                                             Search
                                         </button>
                                         <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                             Reset
                                         </button>
+
                                     </div>
                                 </div>
                             </form>
+
+                            <!-- <button class="button-excel " (click)="exportEx()" style=" width: 81px;
+                                        margin-left: 10px;">CWPExcel</button> -->
                             <!--  list -->
                             <div class="body p-2">
                                 <div class="col-sm-12" style="overflow: auto; height: 450px;">
@@ -128,7 +134,9 @@
                                                             <table id="table2" style="width: 100%;">
                                                                 <thead>
                                                                     <tr>
-                                                                        <th colspan="1" style="border-bottom: 0px !important; "></th>
+                                                                        <th colspan="1"
+                                                                            style="border-bottom: 0px !important; ">
+                                                                        </th>
                                                                         <th colspan="5">Right</th>
                                                                         <th colspan="5">Left</th>
                                                                     </tr>
@@ -195,7 +203,7 @@
                                                                             {{d.RENPVA}}
                                                                         </td>
                                                                         <td>
-                                                                            
+
                                                                         </td>
                                                                         <td>
                                                                             {{d.LENPSPH}}
@@ -210,7 +218,7 @@
                                                                             {{d.LENPVA}}
                                                                         </td>
                                                                         <td>
-                                                                            
+
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -236,6 +244,133 @@
                                 </div>
                             </div>
                         </div>
+
+                          <!-- <div class="body" style="display: none;">
+                            <div class="row">
+                                <div class="col-sm-12" style="overflow:auto;height:530px;">
+                                    <table class="table" id="exportsss">
+                                        <thead class="thead-light">
+                                            <tr>
+                                                <th class="text-left">CustomerName</th>
+                                                <th class="text-left">MobileNo1</th>
+                                                <th class="text-left">MobileNo2</th>
+                                                <th class="text-left">PhoneNo</th>
+                                                <th class="text-left">Email</th>
+                                                <th class="text-left">DOB</th>
+                                                <th class="text-left">Anniversary</th>
+                                                <th class="text-left">Address</th>
+                                                <th class="text-left">Remark</th>
+                                                <th class="text-left">VisitDate</th>
+                                                <th class="text-left">LensType</th>
+
+                                                <th class="text-left">REDPSPH</th>
+                                                <th class="text-left">REDPCYL</th>
+                                                <th class="text-left">REDPAxis</th>
+                                                <th class="text-left">REDPVA</th>
+                                                <th class="text-left">LEDPSPH</th>
+                                                <th class="text-left">LEDPCYL</th>
+                                                <th class="text-left">LEDPAxis</th>
+                                                <th class="text-left">LEDPVA</th>
+
+                                                <th class="text-left">RENPSPH</th>
+                                                <th class="text-left">RENPCYL</th>
+                                                <th class="text-left">RENPAxis</th>
+                                                <th class="text-left">RENPVA</th>
+
+                                                <th class="text-left">LENPSPH</th>
+                                                <th class="text-left">LENPCYL</th>
+                                                <th class="text-left">LENPAxis</th>
+                                                <th class="text-left">LENPVA</th>
+                                            
+                                                <th class="text-left">R_Addition</th>
+                                                <th class="text-left">L_Addition</th>
+                                                <th class="text-left">VisitDate</th>
+                                                <th class="text-left">Lens/Material</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody *ngFor="let c of eyeList " class="text-center">
+                                            <tr *ngFor="let cc of c.spectacle_rx ">
+                                                <td class="text-left"> {{c.Name}} </td>
+                                                <td class="text-left"> {{c.MobileNo1}} </td>
+                                                <td class="text-left"> {{c.MobileNo2}} </td>
+                                                <td class="text-left"> {{c.PhoneNo}} </td>
+                                                <td class="text-left"> {{c.Email}} </td>
+                                                <td class="text-left"> {{c.DOB }} </td>
+                                                <td class="text-left"> {{c.Anniversary }} </td>
+                                                <td class="text-left"> {{c.Address}} </td>
+                                                <td class="text-left"> {{c.Remark}} </td>
+                                                <td class="text-left"> {{c.VisitDate}} </td>
+                                                <td class="text-left"> SpectacleLens</td>
+                                           
+                                                <td class="text-left">{{cc?.REDPSPH}}</td>
+                                                <td class="text-left">{{cc?.REDPCYL}}</td>
+                                                <td class="text-left">{{cc?.REDPAxis}}</td>
+                                                <td class="text-left">{{cc?.REDPVA}}</td>
+                                                <td class="text-left">{{cc?.LEDPSPH}}</td>
+                                                <td class="text-left">{{cc?.LEDPCYL}}</td>
+                                                <td class="text-left">{{cc?.LEDPAxis}}</td>
+                                                <td class="text-left">{{cc?.LEDPVA}}</td>
+
+                                        
+                                                <td class="text-left">{{cc?.RENPSPH}}</td>
+                                                <td class="text-left">{{cc?.RENPCYL}}</td>
+                                                <td class="text-left">{{cc?.RENPAxis}}</td>
+                                                <td class="text-left">{{cc?.RENPVA}}</td>
+
+                                                <td class="text-left">{{cc?.LENPCYL}}</td>
+                                                <td class="text-left">{{cc?.LENPSPH}}</td>
+                                                <td class="text-left">{{cc?.LENPAxis}}</td>
+                                                <td class="text-left">{{cc?.LENPVA}}</td>
+                                              
+                                                <td class="text-left">{{cc?.R_Addition}}</td>
+                                                <td class="text-left">{{cc?.L_Addition}}</td>
+                                                <td class="text-left">{{cc?.FittingHeight}}</td>
+                                                <td class="text-left">{{cc?.Lens}}</td>
+                                            </tr>
+
+                                            <tr *ngFor="let cs of c.contact_lens_rx ">
+                                                <td class="text-left"> {{c.Name}} </td>
+                                                <td class="text-left"> {{c.MobileNo1}} </td>
+                                                <td class="text-left"> {{c.MobileNo2}} </td>
+                                                <td class="text-left"> {{c.PhoneNo}} </td>
+                                                <td class="text-left"> {{c.Email}} </td>
+                                                <td class="text-left"> {{c.DOB }} </td>
+                                                <td class="text-left"> {{c.Anniversary }} </td>
+                                                <td class="text-left"> {{c.Address}} </td>
+                                                <td class="text-left"> {{c.Remark}} </td>
+                                                <td class="text-left"> {{c.VisitDate}} </td>
+                                                <td class="text-left"> ContactLens </td>
+
+                                              
+                                                <td class="text-left">{{cs?.REDPSPH}}</td>
+                                                <td class="text-left">{{cs?.REDPCYL}}</td>
+                                                <td class="text-left">{{cs?.REDPAxis}}</td>
+                                                <td class="text-left">{{cs?.REDPVA}}</td>
+                                                <td class="text-left">{{cs?.LEDPSPH}}</td>
+                                                <td class="text-left">{{cs?.LEDPCYL}}</td>
+                                                <td class="text-left">{{cs?.LEDPAxis}}</td>
+                                                <td class="text-left">{{cs?.LEDPVA}}</td>
+
+                                                
+
+                                                <td class="text-left">{{cs?.RENPSPH}}</td>
+                                                <td class="text-left">{{cs?.RENPCYL}}</td>
+                                                <td class="text-left">{{cs?.RENPAxis}}</td>
+                                                <td class="text-left">{{cs?.RENPVA}}</td>
+                                                <td class="text-left">{{cs?.LENPCYL}}</td>
+                                                <td class="text-left">{{cs?.LENPSPH}}</td>
+                                                <td class="text-left">{{cs?.LENPAxis}}</td>
+                                                <td class="text-left">{{cs?.LENPVA}}</td>
+                                                <td class="text-left">{{cs?.R_Addition}}</td>
+                                                <td class="text-left">{{cs?.L_Addition}}</td>
+                                                <td class="text-left">{{cs?.Other}}</td>
+                                                <td class="text-left">{{cs?.Material}}</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
