--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -387,7 +387,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Discount%</mat-label>
                         <input matInput type="number" min="0" name="Discount" [(ngModel)]="BillItem.DiscountPercentage"
-                            (blur)="calculations('DiscountPercentage', 'discount')" [required]=true #Discountcontrolcontrol
+                            (blur)="calculations('DiscountPercentage', 'discount');calculations('Quantity', 'subTotal');calculations('GSTPercentage', 'gst');" [required]=true #Discountcontrolcontrol
                             [autocomplete]="false">
                         <mat-error>
                             Discount is required
@@ -398,7 +398,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Discount amt</mat-label>
                         <input matInput type="number" min="0" name="DiscountAmount" [(ngModel)]="BillItem.DiscountAmount"
-                            (blur)="calculations('DiscountAmount', 'discount')" [required]=true #DiscountAmountcontrol
+                            (blur)="calculations('DiscountAmount', 'discount');calculations('Quantity', 'subTotal');calculations('GSTPercentage', 'gst');" [required]=true #DiscountAmountcontrol
                             [autocomplete]="false">
                     </mat-form-field>
                 </div>
@@ -632,7 +632,7 @@
 
                                         <mat-icon *ngIf="data.Status !== 0" class="edit_icon ms-1"  type="button"
                                             (click)="openModal(content,data)">remove_red_eye</mat-icon>
-                                        <mat-icon *ngIf="!data.UpdateProduct && editCustomerBill && data.Status !== 0"
+                                        <mat-icon 
                                             class="edit_icon1 ms-1" (click)="showInput(data)">edit
                                         </mat-icon>
                                         <mat-icon class="edit_icon1 ms-1" (click)="showInput(data)"  
